[tool.poetry]
name = "lego-bags"
version = "0.1.0"
description = ""
authors = ["Justin Bramley <jbramley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fitz = "^0.0.1.dev2"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
